css added just for testing... css will be rewritten

--- a/src/components/weather/index.css
+++ b/src/components/weather/index.css
@@ -1,5 +1,7 @@
 .weatherBox {
+  /* display: flex; */
+  position: absolute;
   text-align: center;
   justify-content: center;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
